# sws

./: .appveyor.yml  .gitmodules  .travis.yml  CMakeLists.txt  sws_extension.cpp  sws_wnd.cpp  whatsnew.txt
Breeder/: BR_Envelope.cpp  BR_Loudness.cpp  BR_MidiUtil.cpp  BR_TempoDlg.cpp  BR_Util.cpp  BR_Util.h
BuildUtils/: CMakeLists.txt
Console/: Console.cpp
Fingers/: Envelope.cpp  GrooveTemplates.cpp  MediaItemCommands.cpp  RprMidiTake.cpp
Misc/: Adam.cpp
Padre/: padreMidiItemProcBase.cpp
Projects/: ProjectMgr.cpp
SnM/: SnM.h  SnM_Item.cpp
Xenakios/: MediaDialog.cpp  MixerActions.cpp  MoreItemCommands.cpp  fractions.cpp  main.cpp
cfillion/: cfillion.cpp
cmake/: FindLibEbur128.cmake  FindTagLib.cmake
nofish/: nofish.cpp
setup/macos/: DS_Store.scpt
setup/win32/: NSIS.template.in
